use find_package for threads and zlib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,14 @@ project (htslib)
 include_directories ("${PROJECT_SOURCE_DIR}/htslib")
 add_subdirectory (htslib)
 
+find_package(ZLIB REQUIRED)
+find_package(Threads REQUIRED)
+
 add_executable (htscmd main.c samview.c vcfview.c bamidx.c bcfidx.c bamshuf.c bam2fq.c tabix.c abreak.c bam2bed.c vcfcheck.c vcfisec.c vcfmerge.c)
-target_link_libraries (htscmd hts z m pthread)
+target_link_libraries (htscmd hts-static m ${ZLIB_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 #install (TARGETS libhts DESTINATION bin)
 #install (FILES hts.h DESTINATION include)
 
 install (TARGETS htscmd DESTINATION bin)
+
